[Update] add Card and route for admin

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,8 +1,8 @@
 @import '../../styles/index.scss';
 
 .header{
-    background-color: $color-background-light;
-    height: 70px;
+    background-color: $color-background-semi;
+    height: 80px;
     width: 80vw;
     display: flex;
     flex-direction: row;
