--- a/src/styles/_variables/_variables.scss
+++ b/src/styles/_variables/_variables.scss
@@ -15,6 +15,7 @@ $color-secondary: #3c4556;
 $color-background: #6c7897;
 $color-background-dark: #292e3b;
 $color-background-light: #393f50;
-$color-background_semi: #343b4a;
+$color-background-semi: #343b4a;
+$color-background-semi-dark: #343b4a75;
 $color-text: #929fbf;
 $color-text-dark: #646b7f;
