--- a/src/pages/Profile/styles.scss
+++ b/src/pages/Profile/styles.scss
@@ -20,8 +20,8 @@
             align-items: center;
             padding: 20px 0;
             .avatar{
-                width: 30%;
-                height: 30%;
+                width: 100px;
+                height: 100px;
                 border-radius: 50%;
             }
             .name{
@@ -96,16 +96,45 @@
             display: flex;
             flex-direction: column;
             .category{
-                padding: 30px 0;
+                padding: 15px 0;
                 font-weight: 700;
                 color: white;
             }
             .right{
                 margin-left: 100px;
             }
+            .form-container{
+                display: flex;
+                flex-direction: column;
+                .cate-title{
+                    padding: 10px 0;
+                }
+                .form{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    padding: 10px 0;
+                    .title{
+                        padding: 10px 0;
+                        width: 160px;
+                    }
+                    .input{
+                        width: 100%;
+                        padding: 0 10px;
+                        outline: none;
+                        border-radius: 5px;
+                        border: 1px solid $color-gray;
+                    }
+                    .area{
+                        height: 100px;
+                        padding: 10px;
+                    }
+                }
+            }
         }
         
     }
+
 }
 .line{
     height: 1px;
@@ -130,4 +159,13 @@
 .cate-title{
     color: white;
     margin-right: 5px;
+}
+.btn{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: 0;
+    width: 20%;
+}
+.group{
+    padding: 10px 0;
 }
