--- a/src/pages/Users/styles.scss
+++ b/src/pages/Users/styles.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     width: 80vw;
     margin-bottom: 30px;
+    padding: 0 30px;
     .btn-group{
         margin-bottom: 20px;
         display: flex;
